Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-35275

[Durability]: ADM::highPreparedSeqno throws monotonic exception when ADM moves from null topology to topology with all writes persisted [ETA 2019-07-29]

    XMLWordPrintable

Details

    Description

      Steps to Reproduce

      1. Create a 3 node cluster

      +----------------+----------------------------+--------------+
      | Nodes          | Services                   | Status       |
      +----------------+----------------------------+--------------+
      | 172.23.104.222 | [u'index', u'kv', u'n1ql'] | Cluster node |
      | 172.23.104.223 | None                       | <--- IN ---  |
      | 172.23.104.224 | None                       | <--- IN ---  |
      +----------------+----------------------------+--------------+
      

      2. Add a default bucket with replicas=0
      3. Load 50k items to the bucket with durability=MAJORITY
      Bucket statistics:

      +---------+---------+----------+-----+-------+------------+-----------+-----------+
      | Bucket  | Type    | Replicas | TTL | Items | RAM Quota  | RAM Used  | Disk Used |
      +---------+---------+----------+-----+-------+------------+-----------+-----------+
      | default | membase | 0        | 0   | 50000 | 5942280192 | 120322520 | 47570597  |
      +---------+---------+----------+-----+-------+------------+-----------+-----------+
      

      4. Rebalance out 1 node and start data loading(update, create, delete items) in a separate thread

      +----------------+----------------------------+--------------+
      | Nodes          | Services                   | Status       |
      +----------------+----------------------------+--------------+
      | 172.23.104.224 | [u'kv']                    | --- OUT ---> |
      | 172.23.104.222 | [u'index', u'kv', u'n1ql'] | Cluster node |
      | 172.23.104.223 | [u'kv']                    | Cluster node |
      +----------------+----------------------------+--------------+
      

      Rebalance failed: memcached crashed on ns_1@172.23.104.222

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              ritesh.agarwal Ritesh Agarwal
              ritesh.agarwal Ritesh Agarwal
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty